project/deploy/kubernetes/base/00-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-dep
spec:
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: CLIENT/IMAGE
          imagePullPolicy: Always
          resources:
            requests:
              memory: '64Mi'
              cpu: '250m'
            limits:
              memory: '516Mi'
              cpu: '500m'
---

apiVersion: v1
kind: Service
metadata:
  name: client-svc
spec:
  type: NodePort
  selector:
    app: client
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
