project/deploy/kubernetes/base/01-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-dep
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      volumes:
        - name: shared-files
          persistentVolumeClaim:
            claimName: project-files-claim
      containers:
        - name: server
          image: sirpacoder/server:v3.5
          imagePullPolicy: Always
          volumeMounts:
            - name: shared-files
              mountPath: /usr/src/app/files
          resources:
            requests:
              cpu: "500m"
              memory: "256Mi"
            limits:
              cpu: "1000m"
              memory: "512Mi"
---

apiVersion: v1
kind: Service
metadata:
  name: server-svc
  namespace: project
spec:
  type: NodePort
  selector:
    app: server
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3001
