project/deploy/kubernetes/base/07-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: project
  labels:
    name: project
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-svc
                port:
                  number: 80
          - path: /api/image
            pathType: Prefix
            backend:
              service:
                name: server-svc
                port:
                  number: 80
          - path: /api/todos
            pathType: Prefix
            backend:
              service:

                name: server-svc
                port:
                  number: 80
